--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "lint:prettier": "prettier --check .",
         "lint:prettier:fix": "prettier --write .",
         "lint:staged": "lint-staged",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest"
     },
     "dependencies": {
         "bem-css-modules": "^1.4.3",
