--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "lodash": "^4.17.21",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-router": "^7.6.3",
         "sass": "^1.79.3"
     },
     "devDependencies": {
