--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "eslint": "^9.9.0",
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-prettier": "^5.5.1",
+        "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.9",
         "eslint-plugin-simple-import-sort": "^12.1.1",
